checker/tests/parsing/errors/struct_trailing_comma.mft
type T {
  f: Base { a, };
}
=== error ===
Unrecognized token `}` found at 24:25
Expected one of ".." or "identifier"